cabal-version: 1.12
name:           diagrams-braille
version:        0.1.1
synopsis:       Braille diagrams with plain text
description:    Please see the README at <https://github.com/diagrams/diagrams-braille#readme>
category:       Graphics
homepage:       https://github.com/diagrams/diagrams-braille#readme
bug-reports:    https://github.com/diagrams/diagrams-braille/issues
author:         Mario Lang
maintainer:     mlang@blind.guru, byorgey@gmail.com
copyright:      2018 Mario Lang
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
tested-with:    GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.3 || ==9.8.1

source-repository head
  type: git
  location: https://github.com/diagrams/diagrams-braille

library
  exposed-modules:
      Diagrams.Backend.Braille
      Diagrams.Backend.Braille.CmdLine
  other-modules:
      Paths_diagrams_braille
  hs-source-dirs:
      src
  build-depends:
      JuicyPixels
    , Rasterific >=0.7.4 && <0.8
    , base >=4.7 && <5
    , containers
    , diagrams-core >=1.4 && <1.6
    , diagrams-lib ==1.4.*
    , diagrams-rasterific ==1.4.*
    , filepath
    , hashable
    , lens
    , mtl
    , optparse-applicative
    , time
  default-language: Haskell2010

executable brldia
  main-is: Main.hs
  other-modules:
      Paths_diagrams_braille
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      JuicyPixels
    , Rasterific >=0.7.4 && <0.8
    , base >=4.7 && <5
    , containers
    , diagrams-braille
    , diagrams-core >=1.4 && <1.6
    , diagrams-lib ==1.4.*
    , diagrams-rasterific ==1.4.*
    , filepath
    , hashable
    , lens
    , mtl
    , optparse-applicative
    , time
  default-language: Haskell2010
